# c-hashing

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
CMake/modules/: FindSSE.cmake
metrohash/: CMakeLists.txt  README.md
metrohash/include/: metrohash.h
metrohash/src/: metrohash.c
metrohash/src/all/: metrohash128.c  metrohash128crc.c  metrohash64.c
murmurhash1/: CMakeLists.txt
murmurhash1/include/: murmurhash1.h
murmurhash1/src/: murmurhash1.c
murmurhash1/src/all/: murmurhash1.c  murmurhash1_aligned.c
murmurhash2/: CMakeLists.txt
murmurhash2/include/: murmurhash2.h
murmurhash2/src/: murmurhash2.c
murmurhash2/src/all/: common.h  murmurhash2.c  murmurhash2_add.c  murmurhash2_begin.c  murmurhash2_end.c  murmurhash2_mix_tail.c  murmurhash2a.c  murmurhash64a.c  murmurhash64b.c  murmurhash_aligned2.c  murmurhash_neutral2.c
murmurhash3/: CMakeLists.txt
murmurhash3/include/: murmurhash3.h
murmurhash3/src/: all.c
murmurhash3/src/all/: common.h  murmurhash3_32.c
murmurhash3/src/x64/: murmurhash3.c  murmurhash3_128.c
murmurhash3/src/x86/: murmurhash3.c  murmurhash3_128.c
seahash/: CMakeLists.txt  README.md
seahash/include/: seahash.h
seahash/src/: seahash.c
seahash/test/: seahash_test.c
spooky/: CMakeLists.txt
spooky/include/: spooky.h
spooky/src/: spooky.c
spooky/src/all/: common.h  spooky_end.c  spooky_end_partial.c  spooky_hash128.c  spooky_hash32.c  spooky_hash64.c  spooky_hash_final.c  spooky_hash_init.c  spooky_hash_update.c  spooky_mix.c  spooky_short.c  spooky_short_end.c  spooky_short_mix.c
spooky/test/: TestSpookyV2.cpp
xxhash/: CMakeLists.txt
xxhash/include/: xxhash.h
xxhash/src/: xxhash.c
